fix y-alignment of label in top bar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,1 @@
 /* Add your custom extension styling here */
-
-.iceportal-label {
-    margin-top: 5px;
-    margin-bottom: auto;
-}
